--- a/css/style.css
+++ b/css/style.css
@@ -14,16 +14,63 @@ body {
 	box-sizing: border-box;
 }
 
+img {
+  max-width: 100%;
+  display: block;
+}
+
 /* Menu */
 
 .menu {
 	background: #252525;
+  padding: 15px 0;
+}
+
+.menu-nav {
+  float: right;
+}
+
+.menu-nav ul li {
+  display: inline-block;
+  height: 36px;
+}
+
+.menu-nav ul li:hover {
+  border-bottom: 1px solid #fff;
 }
 
 .menu-nav a {
-	text-decoration: none;
-	color: #fff;
-	font-size: 1.125em;
+  display: block;
+  padding: 10px;
+  text-decoration: none;
+  color: #fff;
+  font-size: 1.125em;
+}
+
+@media (max-width: 739px) {
+  .menu .container {
+    text-align: center;
+  }
+
+  .menu-logo {
+    float: none;
+  }
+
+  .menu-logo img {
+    margin: 0 auto;
+  }
+
+  .menu-nav {
+    float: none;
+    clear: both;
+    top: 12px;
+    position: relative;
+  }
+
+  .menu-nav a {
+    font-size: 1em;
+    padding: 3px;
+  }
 }
 
 /* Intro */
@@ -32,6 +79,8 @@ body {
 	background: url('../img/bg-intro.jpg') no-repeat center center;
 	background-size: cover;
 	color: #fff;
+  padding: 150px 0;
+  text-align: center;
 }
 
 .intro h1 {
@@ -45,6 +94,7 @@ body {
 	width: 20px;
 	height: 4px;
 	background: #fff;
+  margin: 10px auto;
 }
 
 .intro p {
@@ -52,10 +102,26 @@ body {
 	font-size: 1.125em;
 }
 
+@media (max-width: 739px) {
+  .intro {
+    padding: 60px 0;
+  }
+
+  .intro h1 {
+    font-size: 2.5em;
+  }
+}
+
 /* Sobre */
+
+.sobre {
+  padding: 60px 0;
+}
 
 .sobre h2 {
 	font-size: 2.25em;
+  text-align: center;
+  margin-bottom: 60px;
 }
 
 .sobre-item h3 {
@@ -67,12 +133,24 @@ body {
 	font-weight: normal;
 	text-align: center;
 	position: relative;
+  width: 220px;
+  padding: 5px 0 10px 0;
+  top: -25px;
 }
 
 .sobre > p {
 	font-size: 1.125em;
 	line-height: 1.4em;
 	font-style: italic;
+  max-width: 460px;
+  margin: 20px auto;
+  text-align: center;
+}
+
+@media (max-width: 739px) {
+  .sobre > p {
+    max-width: 340px;
+  }
 }
 
 /* Produtos */
@@ -81,10 +159,17 @@ body {
 	background: #e7e4d8;
 	border-top: 3px solid #d6d3c8;
 	border-bottom: 3px solid #d6d3c8;
+  padding: 60px 0;
+}
+
+.produtos-item {
+  margin-bottom: 40px;
 }
 
 .produtos-item h2 {
-	font-size: 2.25em;
+	font-size: 2.1em;
+  text-align: center;
+  margin-bottom: 20px;
 }
 
 .produtos-item h2::before {
@@ -96,6 +181,7 @@ body {
 	border-radius: 50%;
 	border: 5px solid #e7e4d8;
 	box-shadow: 0 0 0 5px currentColor;
+  margin: 20px auto;
 }
 
 h2.produtos-paulista::before {
@@ -123,17 +209,32 @@ h2.produtos-mineiro::before {
 	font-size: 1.125em;
 	font-weight: bold;
 	text-transform: uppercase;
+  display: block;
+  width: 180px;
+  padding: 15px 0;
+  margin: 20px auto 0 auto;
 }
 
 /* Locais */
 
+.locais {
+  padding: 60px 0;
+}
+
+.locais-item {
+  margin-bottom: 40px;
+}
+
 .locais-item h2 {
 	font-size: 2.25em;
+  margin-bottom: 20px;
 }
 
 .locais-item p {
 	font-size: 1.125em;
 	line-height: 1.4em;
+  max-width: 320px;
+  margin-bottom: 40px;
 }
 
 .locais-item a {
@@ -142,12 +243,34 @@ h2.produtos-mineiro::before {
 	text-decoration: none;
 	border: 3px solid;
 	color: #252525;
+  padding: 10px 20px;
+}
+
+@media (max-width: 739px) {
+  .locais-item {
+    margin-bottom: 20px;
+  }
+
+  .locais-item > div, .locais-item img {
+    width: 300px;
+    margin: 0;
+    text-align: center;
+  }
+
+  .locais-item img {
+    margin: 25px 0;
+  }
+
+  .locais-item p {
+    margin-bottom: 40px;
+  }
 }
 
 /* Assine */
 
 .assine {
 	background: #e7e4d8;
+  padding: 30px 0;
 }
 
 .assine-info h2 {
@@ -169,6 +292,9 @@ h2.produtos-mineiro::before {
 	font-size: 1.5em;
 	font-style: italic;
 	font-family: Georgia, serif;
+  width: calc(100% - 140px);
+  padding: 10px;
+  float: left;
 }
 
 .assine button {
@@ -179,15 +305,55 @@ h2.produtos-mineiro::before {
 	font-size: 1.5em;
 	color: #fff;
 	cursor: pointer;
+  width: 140px;
+  padding: 13px 0;
+}
+
+@media (max-width: 739px) {
+  .assine input,
+  .assine button {
+    float: none;
+    width: 100%;
+  }
+
+  .assine-info {
+    text-align: center;
+  }
+
+  .assine-info h2 {
+    font-size: 2em;
+  }
+
+  .assine-info p {
+    font-size: 1.3em;
+    margin-bottom: 20px;
+  }
 }
 
 /*Footer*/
 
 .footer {
 	background: #d6d3c8;
+  padding: 40px 0;
+}
+
+.footer img {
+  float: right;
 }
 
 .footer p {
 	font-size: 1.125em;
 	line-height: 1.4em;
+}
+
+@media (max-width: 739px) {
+  .footer p {
+    text-align: center;
+  }
+
+  .footer img {
+    float: none;
+    padding-top: 20px;
+    margin: 0 auto;
+  }
 }
