--- a/css/style.css
+++ b/css/style.css
@@ -1,76 +1,57 @@
 /* Reset */
-
-body, h1, h2, h3, p, ul {
-	padding: 0px;
-	margin: 0px;
-}
-
-body {
-	font-family: Georgia, serif;
-	color: #252525;
+:root {
+  --black-color: #252525;
 }
 
 * {
-	box-sizing: border-box;
+  box-sizing: border-box;
 }
 
+body, h1, h2, h3, p, ul {
+  margin: 0;
+  padding: 0;
+}
+
+/* Macete para tornar imagem responsiva */
 img {
-  max-width: 100%;
   display: block;
+  max-width: 100%;
+}
+
+body {
+  font-family: Georgia, serif;
+  color: var(--black-color);
+}
+
+.container {
+  display: flex;
+  max-width: 960px;
+  margin: 0 auto;
 }
 
 /* Menu */
 
 .menu {
-	background: #252525;
+	background: var(--black-color);
   padding: 15px 0;
 }
 
 .menu-nav {
+  flex: 1;
+  align-self: center;
+}
+
+.menu-nav ul {
   float: right;
-}
-
-.menu-nav ul li {
-  display: inline-block;
-  height: 36px;
-}
-
-.menu-nav ul li:hover {
-  border-bottom: 1px solid #fff;
+  display: flex;
+  list-style: none;
 }
 
 .menu-nav a {
-  display: block;
+	text-decoration: none;
+	color: #fff;
+	font-size: 1.125em;
   padding: 10px;
-  text-decoration: none;
-  color: #fff;
-  font-size: 1.125em;
-}
-
-@media (max-width: 739px) {
-  .menu .container {
-    text-align: center;
-  }
-
-  .menu-logo {
-    float: none;
-  }
-
-  .menu-logo img {
-    margin: 0 auto;
-  }
-
-  .menu-nav {
-    float: none;
-    clear: both;
-    top: 12px;
-    position: relative;
-  }
-
-  .menu-nav a {
-    font-size: 1em;
-    padding: 3px;
-  }
 }
 
 /* Intro */
@@ -102,16 +83,6 @@ img {
 	font-size: 1.125em;
 }
 
-@media (max-width: 739px) {
-  .intro {
-    padding: 60px 0;
-  }
-
-  .intro h1 {
-    font-size: 2.5em;
-  }
-}
-
 /* Sobre */
 
 .sobre {
@@ -124,33 +95,32 @@ img {
   margin-bottom: 60px;
 }
 
+.sobre-item {
+  flex: 1;
+  margin: 0 10px;
+}
+
 .sobre-item h3 {
 	font-size: 2.25em;
 	line-height: 1em;
-	background: #252525;
+	background: var(--black-color);
 	color: #fff;
 	font-style: italic;
 	font-weight: normal;
 	text-align: center;
 	position: relative;
+  top: -25px;
   width: 220px;
   padding: 5px 0 10px 0;
-  top: -25px;
 }
 
 .sobre > p {
 	font-size: 1.125em;
 	line-height: 1.4em;
 	font-style: italic;
-  max-width: 460px;
   margin: 20px auto;
+  max-width: 460px;
   text-align: center;
-}
-
-@media (max-width: 739px) {
-  .sobre > p {
-    max-width: 340px;
-  }
 }
 
 /* Produtos */
@@ -159,17 +129,10 @@ img {
 	background: #e7e4d8;
 	border-top: 3px solid #d6d3c8;
 	border-bottom: 3px solid #d6d3c8;
-  padding: 60px 0;
-}
-
-.produtos-item {
-  margin-bottom: 40px;
 }
 
 .produtos-item h2 {
-	font-size: 2.1em;
-  text-align: center;
-  margin-bottom: 20px;
+	font-size: 2.25em;
 }
 
 .produtos-item h2::before {
@@ -181,7 +144,6 @@ img {
 	border-radius: 50%;
 	border: 5px solid #e7e4d8;
 	box-shadow: 0 0 0 5px currentColor;
-  margin: 20px auto;
 }
 
 h2.produtos-paulista::before {
@@ -202,39 +164,24 @@ h2.produtos-mineiro::before {
 }
 
 .produtos-btn {
-	border: 3px solid #252525;
-	color: #252525;
+	border: 3px solid var(--black-color);
+	color: var(--black-color);
 	text-decoration: none;
 	text-align: center;
 	font-size: 1.125em;
 	font-weight: bold;
 	text-transform: uppercase;
-  display: block;
-  width: 180px;
-  padding: 15px 0;
-  margin: 20px auto 0 auto;
 }
 
 /* Locais */
 
-.locais {
-  padding: 60px 0;
-}
-
-.locais-item {
-  margin-bottom: 40px;
-}
-
 .locais-item h2 {
 	font-size: 2.25em;
-  margin-bottom: 20px;
 }
 
 .locais-item p {
 	font-size: 1.125em;
 	line-height: 1.4em;
-  max-width: 320px;
-  margin-bottom: 40px;
 }
 
 .locais-item a {
@@ -242,35 +189,13 @@ h2.produtos-mineiro::before {
 	text-transform: uppercase;
 	text-decoration: none;
 	border: 3px solid;
-	color: #252525;
-  padding: 10px 20px;
-}
-
-@media (max-width: 739px) {
-  .locais-item {
-    margin-bottom: 20px;
-  }
-
-  .locais-item > div, .locais-item img {
-    width: 300px;
-    margin: 0;
-    text-align: center;
-  }
-
-  .locais-item img {
-    margin: 25px 0;
-  }
-
-  .locais-item p {
-    margin-bottom: 40px;
-  }
+	color: var(--black-color);
 }
 
 /* Assine */
 
 .assine {
 	background: #e7e4d8;
-  padding: 30px 0;
 }
 
 .assine-info h2 {
@@ -287,73 +212,30 @@ h2.produtos-mineiro::before {
 }
 
 .assine input {
-	border: 3px solid #252525;
+	border: 3px solid var(--black-color);
 	background: none;
 	font-size: 1.5em;
 	font-style: italic;
 	font-family: Georgia, serif;
-  width: calc(100% - 140px);
-  padding: 10px;
-  float: left;
 }
 
 .assine button {
-	background: #252525;
+	background: var(--black-color);
 	border: none;
 	font-family: Georgia, serif;
 	text-transform: uppercase;
 	font-size: 1.5em;
 	color: #fff;
 	cursor: pointer;
-  width: 140px;
-  padding: 13px 0;
-}
-
-@media (max-width: 739px) {
-  .assine input,
-  .assine button {
-    float: none;
-    width: 100%;
-  }
-
-  .assine-info {
-    text-align: center;
-  }
-
-  .assine-info h2 {
-    font-size: 2em;
-  }
-
-  .assine-info p {
-    font-size: 1.3em;
-    margin-bottom: 20px;
-  }
 }
 
 /*Footer*/
 
 .footer {
 	background: #d6d3c8;
-  padding: 40px 0;
-}
-
-.footer img {
-  float: right;
 }
 
 .footer p {
 	font-size: 1.125em;
 	line-height: 1.4em;
-}
-
-@media (max-width: 739px) {
-  .footer p {
-    text-align: center;
-  }
-
-  .footer img {
-    float: none;
-    padding-top: 20px;
-    margin: 0 auto;
-  }
 }
