--- a/css/style.css
+++ b/css/style.css
@@ -129,10 +129,18 @@ body {
 	background: #e7e4d8;
 	border-top: 3px solid #d6d3c8;
 	border-bottom: 3px solid #d6d3c8;
+  padding: 60px 0;
+}
+
+.produtos-item {
+  flex: 1;
+  margin: 0 10px 30px 10px;
 }
 
 .produtos-item h2 {
 	font-size: 2.25em;
+  text-align: center;
+  margin-bottom: 20px;
 }
 
 .produtos-item h2::before {
@@ -144,6 +152,7 @@ body {
 	border-radius: 50%;
 	border: 5px solid #e7e4d8;
 	box-shadow: 0 0 0 5px currentColor;
+  margin: 20px auto;
 }
 
 h2.produtos-paulista::before {
@@ -171,17 +180,42 @@ h2.produtos-mineiro::before {
 	font-size: 1.125em;
 	font-weight: bold;
 	text-transform: uppercase;
+  display: block;
+  width: 180px;
+  padding: 15px 0;
+  margin: 20px auto 0 auto;
 }
 
 /* Locais */
 
+.locais {
+  padding: 60px 0;
+}
+
+.locais-item {
+  margin-bottom: 40px;
+}
+
+.locais-img, .locais-info {
+  flex: 1;
+  margin: 0 10px;
+}
+
+.locais-img img {
+  display: block;
+  max-width: 100%;
+}
+
 .locais-item h2 {
 	font-size: 2.25em;
+  margin-bottom: 20px;
 }
 
 .locais-item p {
 	font-size: 1.125em;
 	line-height: 1.4em;
+  max-width: 320px;
+  margin-bottom: 40px;
 }
 
 .locais-item a {
@@ -190,12 +224,19 @@ h2.produtos-mineiro::before {
 	text-decoration: none;
 	border: 3px solid;
 	color: var(--black-color);
+  padding: 10px 20px;
 }
 
 /* Assine */
 
 .assine {
 	background: #e7e4d8;
+  padding: 30px 0;
+}
+
+.assine-info {
+  flex: 1;
+  margin: 0 10px;
 }
 
 .assine-info h2 {
@@ -207,11 +248,22 @@ h2.produtos-mineiro::before {
 	font-style: italic;
 }
 
+.assine form {
+  flex: 1;
+  margin: 0 10px;
+  display: flex;
+  flex-wrap: wrap;
+  align-content: flex-start;
+}
+
 .assine form label {
 	display: none;
 }
 
 .assine input {
+  flex: 1;
+  align-self: flex-start;
+  padding: 10px;
 	border: 3px solid var(--black-color);
 	background: none;
 	font-size: 1.5em;
@@ -220,6 +272,8 @@ h2.produtos-mineiro::before {
 }
 
 .assine button {
+  flex: 1;
+  height: 53px;
 	background: var(--black-color);
 	border: none;
 	font-family: Georgia, serif;
@@ -233,9 +287,16 @@ h2.produtos-mineiro::before {
 
 .footer {
 	background: #d6d3c8;
+  padding: 40px 0;
 }
 
 .footer p {
 	font-size: 1.125em;
 	line-height: 1.4em;
+  margin: 0 10px;
+  flex: 1;
+}
+
+.footer-img {
+  margin: 0 10px;
 }
