feat: adicionado css responsivo do layout com flexbox

--- a/css/style.css
+++ b/css/style.css
@@ -29,6 +29,13 @@ body {
   margin: 0 auto;
 }
 
+@media (max-width: 739px) {
+  .container {
+    flex-direction: column;
+    max-width: 300px;
+  }
+}
+
 /* Menu */
 
 .menu {
@@ -36,8 +43,13 @@ body {
   padding: 15px 0;
 }
 
+.menu-logo {
+  margin: 0 10px;
+}
+
 .menu-nav {
   flex: 1;
+  margin: 0 10px;
   align-self: center;
 }
 
@@ -52,6 +64,24 @@ body {
 	color: #fff;
 	font-size: 1.125em;
   padding: 10px;
+}
+
+@media (max-width: 739px) {
+  .menu-logo{
+    margin-bottom: 10px;
+  }
+
+  .menu-nav {
+    margin: 0;
+  }
+
+  .menu-logo img {
+    margin: 0 auto;
+  }
+
+  .menu-nav ul li a {
+    padding-left: 0;
+  }
 }
 
 /* Intro */
@@ -81,6 +111,12 @@ body {
 .intro p {
 	font-style: italic;
 	font-size: 1.125em;
+}
+
+@media (max-width: 739px) {
+  .intro {
+    padding: 60px 0;
+  }
 }
 
 /* Sobre */
@@ -121,6 +157,17 @@ body {
   margin: 20px auto;
   max-width: 460px;
   text-align: center;
+}
+
+@media (max-width: 739px) {
+  .sobre > p {
+    max-width: 300px;
+  }
+
+  .sobre-item {
+    margin-left: 0;
+    margin-right: 0;
+  }
 }
 
 /* Produtos */
@@ -186,6 +233,17 @@ h2.produtos-mineiro::before {
   margin: 20px auto 0 auto;
 }
 
+@media (max-width: 739px) {
+  .produtos-item {
+    margin-left: 0;
+    margin-right: 0;
+  }
+
+  .produtos-item > p {
+    text-align: center;
+  }
+}
+
 /* Locais */
 
 .locais {
@@ -227,6 +285,21 @@ h2.produtos-mineiro::before {
   padding: 10px 20px;
 }
 
+@media (max-width: 739px) {
+  .locais-item {
+    text-align: center;
+  }
+
+  .locais-info {
+    margin-top: 5px;
+  }
+
+  .locais-img, .locais-info {
+    margin-left: 0;
+    margin-right: 0;
+  }
+}
+
 /* Assine */
 
 .assine {
@@ -254,6 +327,17 @@ h2.produtos-mineiro::before {
   display: flex;
   flex-wrap: wrap;
   align-content: flex-start;
+}
+
+@media (max-width: 739px) {
+  .assine-info {
+    margin: 0 0 20px 0;
+    text-align: center;
+  }
+
+  .assine form {
+    margin: 0;
+  }
 }
 
 .assine form label {
@@ -300,3 +384,10 @@ h2.produtos-mineiro::before {
 .footer-img {
   margin: 0 10px;
 }
+
+@media (max-width: 739px) {
+  .footer p, .footer-img {
+    margin: 10px auto;
+  }
+}
+
