feat: adicionado boilerplate inicial para layout com bootstrap

--- a/css/style.css
+++ b/css/style.css
@@ -1,393 +1,193 @@
 /* Reset */
-:root {
-  --black-color: #252525;
+
+body, h1, h2, h3, p, ul {
+  padding: 0;
+  margin: 0;
+}
+
+body {
+  font-family: Georgia, serif;
+  color: #252525;
 }
 
 * {
   box-sizing: border-box;
 }
 
-body, h1, h2, h3, p, ul {
-  margin: 0;
-  padding: 0;
-}
-
-/* Macete para tornar imagem responsiva */
-img {
-  display: block;
-  max-width: 100%;
-}
-
-body {
-  font-family: Georgia, serif;
-  color: var(--black-color);
-}
-
-.container {
-  display: flex;
-  max-width: 960px;
-  margin: 0 auto;
-}
-
-@media (max-width: 739px) {
-  .container {
-    flex-direction: column;
-    max-width: 300px;
-  }
-}
-
 /* Menu */
 
 .menu {
-	background: var(--black-color);
-  padding: 15px 0;
-}
-
-.menu-logo {
-  margin: 0 10px;
-}
-
-.menu-nav {
-  flex: 1;
-  margin: 0 10px;
-  align-self: center;
-}
-
-.menu-nav ul {
-  float: right;
-  display: flex;
-  list-style: none;
+  background: #252525;
 }
 
 .menu-nav a {
-	text-decoration: none;
-	color: #fff;
-	font-size: 1.125em;
-  padding: 10px;
-}
-
-@media (max-width: 739px) {
-  .menu-logo{
-    margin-bottom: 10px;
-  }
-
-  .menu-nav {
-    margin: 0;
-  }
-
-  .menu-logo img {
-    margin: 0 auto;
-  }
-
-  .menu-nav ul li a {
-    padding-left: 0;
-  }
+  text-decoration: none;
+  color: #fff;
+  font-size: 1.125em;
 }
 
 /* Intro */
 
 .intro {
-	background: url('../img/bg-intro.jpg') no-repeat center center;
-	background-size: cover;
-	color: #fff;
-  padding: 150px 0;
-  text-align: center;
+  background: url('../img/bg-intro.jpg') no-repeat center center;
+  background-size: cover;
+  color: #fff;
 }
 
 .intro h1 {
-	text-transform: uppercase;
-	font-size: 3em;
+  text-transform: uppercase;
+  font-size: 3em;
 }
 
 .intro h1::after {
-	content: '';
-	display: block;
-	width: 20px;
-	height: 4px;
-	background: #fff;
-  margin: 10px auto;
+  content: '';
+  display: block;
+  width: 20px;
+  height: 4px;
+  background: #fff;
 }
 
 .intro p {
-	font-style: italic;
-	font-size: 1.125em;
-}
-
-@media (max-width: 739px) {
-  .intro {
-    padding: 60px 0;
-  }
+  font-style: italic;
+  font-size: 1.125em;
 }
 
 /* Sobre */
 
-.sobre {
-  padding: 60px 0;
-}
-
 .sobre h2 {
-	font-size: 2.25em;
-  text-align: center;
-  margin-bottom: 60px;
-}
-
-.sobre-item {
-  flex: 1;
-  margin: 0 10px;
+  font-size: 2.25em;
 }
 
 .sobre-item h3 {
-	font-size: 2.25em;
-	line-height: 1em;
-	background: var(--black-color);
-	color: #fff;
-	font-style: italic;
-	font-weight: normal;
-	text-align: center;
-	position: relative;
-  top: -25px;
-  width: 220px;
-  padding: 5px 0 10px 0;
+  font-size: 2.25em;
+  line-height: 1em;
+  background: #252525;
+  color: #fff;
+  font-style: italic;
+  font-weight: normal;
+  text-align: center;
+  position: relative;
 }
 
 .sobre > p {
-	font-size: 1.125em;
-	line-height: 1.4em;
-	font-style: italic;
-  margin: 20px auto;
-  max-width: 460px;
-  text-align: center;
-}
-
-@media (max-width: 739px) {
-  .sobre > p {
-    max-width: 300px;
-  }
-
-  .sobre-item {
-    margin-left: 0;
-    margin-right: 0;
-  }
+  font-size: 1.125em;
+  line-height: 1.4em;
+  font-style: italic;
 }
 
 /* Produtos */
 
 .produtos {
-	background: #e7e4d8;
-	border-top: 3px solid #d6d3c8;
-	border-bottom: 3px solid #d6d3c8;
-  padding: 60px 0;
-}
-
-.produtos-item {
-  flex: 1;
-  margin: 0 10px 30px 10px;
+  background: #e7e4d8;
+  border-top: 3px solid #d6d3c8;
+  border-bottom: 3px solid #d6d3c8;
 }
 
 .produtos-item h2 {
-	font-size: 2.25em;
-  text-align: center;
-  margin-bottom: 20px;
+  font-size: 2.25em;
 }
 
 .produtos-item h2::before {
-	content: '';
-	display: block;
-	width: 100px;
-	height: 100px;
-	background: currentColor;
-	border-radius: 50%;
-	border: 5px solid #e7e4d8;
-	box-shadow: 0 0 0 5px currentColor;
-  margin: 20px auto;
+  content: '';
+  display: block;
+  width: 100px;
+  height: 100px;
+  background: currentColor;
+  border-radius: 50%;
+  border: 5px solid #e7e4d8;
+  box-shadow: 0 0 0 5px currentColor;
 }
 
 h2.produtos-paulista::before {
-	color: #492901;
+  color: #492901;
 }
 
 h2.produtos-carioca::before {
-	color: #c17139;
+  color: #c17139;
 }
 
 h2.produtos-mineiro::before {
-	color: #d7a54d;
+  color: #d7a54d;
 }
 
 .produtos-item p {
-	font-size: 0.875em;
-	line-height: 1.4em;
+  font-size: 0.875em;
+  line-height: 1.4em;
 }
 
 .produtos-btn {
-	border: 3px solid var(--black-color);
-	color: var(--black-color);
-	text-decoration: none;
-	text-align: center;
-	font-size: 1.125em;
-	font-weight: bold;
-	text-transform: uppercase;
-  display: block;
-  width: 180px;
-  padding: 15px 0;
-  margin: 20px auto 0 auto;
-}
-
-@media (max-width: 739px) {
-  .produtos-item {
-    margin-left: 0;
-    margin-right: 0;
-  }
-
-  .produtos-item > p {
-    text-align: center;
-  }
+  border: 3px solid #252525;
+  color: #252525;
+  text-decoration: none;
+  text-align: center;
+  font-size: 1.125em;
+  font-weight: bold;
+  text-transform: uppercase;
 }
 
 /* Locais */
 
-.locais {
-  padding: 60px 0;
-}
-
-.locais-item {
-  margin-bottom: 40px;
-}
-
-.locais-img, .locais-info {
-  flex: 1;
-  margin: 0 10px;
-}
-
-.locais-img img {
-  display: block;
-  max-width: 100%;
-}
-
 .locais-item h2 {
-	font-size: 2.25em;
-  margin-bottom: 20px;
+  font-size: 2.25em;
 }
 
 .locais-item p {
-	font-size: 1.125em;
-	line-height: 1.4em;
-  max-width: 320px;
-  margin-bottom: 40px;
+  font-size: 1.125em;
+  line-height: 1.4em;
 }
 
 .locais-item a {
-	font-size: 1.125em;
-	text-transform: uppercase;
-	text-decoration: none;
-	border: 3px solid;
-	color: var(--black-color);
-  padding: 10px 20px;
-}
-
-@media (max-width: 739px) {
-  .locais-item {
-    text-align: center;
-  }
-
-  .locais-info {
-    margin-top: 5px;
-  }
-
-  .locais-img, .locais-info {
-    margin-left: 0;
-    margin-right: 0;
-  }
+  font-size: 1.125em;
+  text-transform: uppercase;
+  text-decoration: none;
+  border: 3px solid;
+  color: #252525;
 }
 
 /* Assine */
 
 .assine {
-	background: #e7e4d8;
-  padding: 30px 0;
-}
-
-.assine-info {
-  flex: 1;
-  margin: 0 10px;
+  background: #e7e4d8;
 }
 
 .assine-info h2 {
-	font-size: 2.25em;
+  font-size: 2.25em;
 }
 
 .assine-info p {
-	font-size: 1.5em;
-	font-style: italic;
-}
-
-.assine form {
-  flex: 1;
-  margin: 0 10px;
-  display: flex;
-  flex-wrap: wrap;
-  align-content: flex-start;
-}
-
-@media (max-width: 739px) {
-  .assine-info {
-    margin: 0 0 20px 0;
-    text-align: center;
-  }
-
-  .assine form {
-    margin: 0;
-  }
+  font-size: 1.5em;
+  font-style: italic;
 }
 
 .assine form label {
-	display: none;
+  display: none;
 }
 
 .assine input {
-  flex: 1;
-  align-self: flex-start;
-  padding: 10px;
-	border: 3px solid var(--black-color);
-	background: none;
-	font-size: 1.5em;
-	font-style: italic;
-	font-family: Georgia, serif;
+  border: 3px solid #252525;
+  background: none;
+  font-size: 1.5em;
+  font-style: italic;
+  font-family: Georgia, serif;
 }
 
 .assine button {
-  flex: 1;
-  height: 53px;
-	background: var(--black-color);
-	border: none;
-	font-family: Georgia, serif;
-	text-transform: uppercase;
-	font-size: 1.5em;
-	color: #fff;
-	cursor: pointer;
+  background: #252525;
+  border: none;
+  font-family: Georgia, serif;
+  text-transform: uppercase;
+  font-size: 1.5em;
+  color: #fff;
+  cursor: pointer;
 }
 
 /*Footer*/
 
 .footer {
-	background: #d6d3c8;
-  padding: 40px 0;
+  background: #d6d3c8;
 }
 
 .footer p {
-	font-size: 1.125em;
-	line-height: 1.4em;
-  margin: 0 10px;
-  flex: 1;
+  font-size: 1.125em;
+  line-height: 1.4em;
 }
-
-.footer-img {
-  margin: 0 10px;
-}
-
-@media (max-width: 739px) {
-  .footer p, .footer-img {
-    margin: 10px auto;
-  }
-}
-
