fix: fixes attribution style

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -500,7 +500,7 @@ main {
 
 footer {
   margin-top: 1.5rem;
-  margin-bottom: 0.5rem; }
+  padding-bottom: 0.5rem; }
   footer .attribution {
     font-size: 11px;
     text-align: center;
