--- a/styles/scss/main.scss
+++ b/styles/scss/main.scss
@@ -119,7 +119,7 @@ main {
 
 footer {
   margin-top: $m-6;
-  margin-bottom: $m-2;
+  padding-bottom: $p-2;
 
   .attribution {
     font-size: 11px;
